# rainbase

./: .gitignore  package.json
contract/: Cargo.toml  deploy.sh
contract/examples/: trusted_setup.rs
contract/neardev/: dev-account  dev-account.env
contract/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: tests.rs
neardev/: dev-account  dev-account.env
