[package]
name = "rainbase_contract"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
barnett-smart-card-protocol = { git = "https://github.com/Sladuca/mental-poker.git" }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
is_sorted = "0.1.1"
poker = { default-features = false, version = "0.4.1" }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
